--- a/canon.html
+++ b/canon.html
@@ -120,7 +120,7 @@
         <div class="album">
           <a href="#" class="foto-album"><img src="img/Familia-Canon.jpeg" alt="Familia"></a>
           <div class="album-textos">
-            <p>Vitória Canon Martins - Eu e familia | 17 anos</p>
+            <p>Vitória Canon Martins - Eu e familia | </p>
           </div>
         </div>
 
